--- a/template/index.html
+++ b/template/index.html
@@ -62,10 +62,12 @@
       // Vote button event listeners
       document.getElementById("voteTabs").addEventListener("click", function () {
         vote("TABS");
+        window.location.reload();
       });
 
       document.getElementById("voteSpaces").addEventListener("click", function () {
         vote("SPACES");
+        window.location.reload();
       });
     });
   </script>
